Basic web server template updates from automation-server project